address first comments